{
  "version": 4,
  "terraform_version": "1.7.4",
  "serial": 692,
  "lineage": "d8eef7eb-370d-5d68-40e2-e995e6703d07",
  "resources": [
    {
      "module": "module.instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "auth",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b9932f4918a00c4f",
            "arn": "arn:aws:ec2:eu-west-2:058264358506:instance/i-0e8a005ae2c8c5d17",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e8a005ae2c8c5d17",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "firstProjectKeyPair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-08866d8edc755632a",
            "private_dns": "ip-10-0-8-7.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.8.7",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09d434139b26d2749",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0012b62a35b3836cf",
              "sg-07e4849a556a7222a",
              "sg-0b9e2be61be134e2d",
              "sg-0c2b6f1bdaa4b9d72"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e0d44e69917a5205",
            "tags": {
              "Name": "auth"
            },
            "tags_all": {
              "Name": "auth"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0012b62a35b3836cf",
              "sg-07e4849a556a7222a",
              "sg-0b9e2be61be134e2d",
              "sg-0c2b6f1bdaa4b9d72"
            ]
          },
          "dependencies": [
            "module.instance.data.aws_ami.ubuntu",
            "module.security.aws_security_group.allow_3000",
            "module.security.aws_security_group.allow_http",
            "module.security.aws_security_group.allow_https",
            "module.security.aws_security_group.allow_ssh",
            "module.security.data.http.my_ip",
            "module.vpc.aws_subnet.private_subnets",
            "module.vpc.aws_vpc.johans-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "heating",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b9932f4918a00c4f",
            "arn": "arn:aws:ec2:eu-west-2:058264358506:instance/i-0a39dfcbfe251ff05",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a39dfcbfe251ff05",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "firstProjectKeyPair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e77e925f37fd73c8",
            "private_dns": "ip-10-0-1-93.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.93",
            "public_ip": "35.177.4.191",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-090ed11699fd68f43",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0012b62a35b3836cf",
              "sg-07e4849a556a7222a",
              "sg-0b9e2be61be134e2d",
              "sg-0c2b6f1bdaa4b9d72"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06b6b6949e0d40c9d",
            "tags": {
              "Name": "heating"
            },
            "tags_all": {
              "Name": "heating"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0012b62a35b3836cf",
              "sg-07e4849a556a7222a",
              "sg-0b9e2be61be134e2d",
              "sg-0c2b6f1bdaa4b9d72"
            ]
          },
          "dependencies": [
            "module.instance.data.aws_ami.ubuntu",
            "module.security.aws_security_group.allow_3000",
            "module.security.aws_security_group.allow_http",
            "module.security.aws_security_group.allow_https",
            "module.security.aws_security_group.allow_ssh",
            "module.security.data.http.my_ip",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.johans-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "lighting",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b9932f4918a00c4f",
            "arn": "arn:aws:ec2:eu-west-2:058264358506:instance/i-05f7276c249df323e",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05f7276c249df323e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "firstProjectKeyPair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-08e95a86947621b73",
            "private_dns": "ip-10-0-0-177.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.177",
            "public_ip": "35.177.136.102",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0cc3d09084e4da945",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0012b62a35b3836cf",
              "sg-07e4849a556a7222a",
              "sg-0b9e2be61be134e2d",
              "sg-0c2b6f1bdaa4b9d72"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-070df21192f4adc88",
            "tags": {
              "Name": "lighting"
            },
            "tags_all": {
              "Name": "lighting"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0012b62a35b3836cf",
              "sg-07e4849a556a7222a",
              "sg-0b9e2be61be134e2d",
              "sg-0c2b6f1bdaa4b9d72"
            ]
          },
          "dependencies": [
            "module.instance.data.aws_ami.ubuntu",
            "module.security.aws_security_group.allow_3000",
            "module.security.aws_security_group.allow_http",
            "module.security.aws_security_group.allow_https",
            "module.security.aws_security_group.allow_ssh",
            "module.security.data.http.my_ip",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.johans-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "status",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b9932f4918a00c4f",
            "arn": "arn:aws:ec2:eu-west-2:058264358506:instance/i-0adb35c342175bd2d",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0adb35c342175bd2d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "firstProjectKeyPair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0228567e053a05cf9",
            "private_dns": "ip-10-0-2-102.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.102",
            "public_ip": "18.133.255.160",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-063f81f8e2b10fbf5",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0012b62a35b3836cf",
              "sg-07e4849a556a7222a",
              "sg-0b9e2be61be134e2d",
              "sg-0c2b6f1bdaa4b9d72"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0118d624f9193e554",
            "tags": {
              "Name": "status"
            },
            "tags_all": {
              "Name": "status"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0012b62a35b3836cf",
              "sg-07e4849a556a7222a",
              "sg-0b9e2be61be134e2d",
              "sg-0c2b6f1bdaa4b9d72"
            ]
          },
          "dependencies": [
            "module.instance.data.aws_ami.ubuntu",
            "module.security.aws_security_group.allow_3000",
            "module.security.aws_security_group.allow_http",
            "module.security.aws_security_group.allow_https",
            "module.security.aws_security_group.allow_ssh",
            "module.security.data.http.my_ip",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.johans-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb",
      "name": "private-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:058264358506:loadbalancer/app/private-lb/73d4f2097f89e183",
            "arn_suffix": "app/private-lb/73d4f2097f89e183",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "private-lb-792493280.eu-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-2:058264358506:loadbalancer/app/private-lb/73d4f2097f89e183",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "private-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0012b62a35b3836cf",
              "sg-07e4849a556a7222a",
              "sg-0b9e2be61be134e2d",
              "sg-0c2b6f1bdaa4b9d72"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-05fc8e4144673629c"
              },
              {
                "subnet_id": "subnet-0e0d44e69917a5205"
              },
              {
                "subnet_id": "subnet-0fb94f6ac8fe7e2bb"
              }
            ],
            "subnets": [
              "subnet-05fc8e4144673629c",
              "subnet-0e0d44e69917a5205",
              "subnet-0fb94f6ac8fe7e2bb"
            ],
            "vpc_id": "vpc-05202e524762399f2",
            "xff_header_processing_mode": "append",
            "zone_id": "ZHURV8PSTC4K8"
          },
          "dependencies": [
            "module.security.aws_security_group.allow_3000",
            "module.security.aws_security_group.allow_http",
            "module.security.aws_security_group.allow_https",
            "module.security.aws_security_group.allow_ssh",
            "module.security.data.http.my_ip",
            "module.vpc.aws_subnet.private_subnets",
            "module.vpc.aws_vpc.johans-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb",
      "name": "public-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:058264358506:loadbalancer/app/public-lb/87ff8b4e0bb2d305",
            "arn_suffix": "app/public-lb/87ff8b4e0bb2d305",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "public-lb-1127649014.eu-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-2:058264358506:loadbalancer/app/public-lb/87ff8b4e0bb2d305",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "public-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0012b62a35b3836cf",
              "sg-07e4849a556a7222a",
              "sg-0b9e2be61be134e2d",
              "sg-0c2b6f1bdaa4b9d72"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0118d624f9193e554"
              },
              {
                "subnet_id": "subnet-06b6b6949e0d40c9d"
              },
              {
                "subnet_id": "subnet-070df21192f4adc88"
              }
            ],
            "subnets": [
              "subnet-0118d624f9193e554",
              "subnet-06b6b6949e0d40c9d",
              "subnet-070df21192f4adc88"
            ],
            "vpc_id": "vpc-05202e524762399f2",
            "xff_header_processing_mode": "append",
            "zone_id": "ZHURV8PSTC4K8"
          },
          "dependencies": [
            "module.security.aws_security_group.allow_3000",
            "module.security.aws_security_group.allow_http",
            "module.security.aws_security_group.allow_https",
            "module.security.aws_security_group.allow_ssh",
            "module.security.data.http.my_ip",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.johans-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "private-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:058264358506:listener/app/private-lb/73d4f2097f89e183/72c50734789bf658",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:058264358506:targetgroup/private-lb-tg/fea045b81a27f49c",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:058264358506:listener/app/private-lb/73d4f2097f89e183/72c50734789bf658",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:058264358506:loadbalancer/app/private-lb/73d4f2097f89e183",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.load_balancer.aws_lb.private-lb",
            "module.load_balancer.aws_lb_target_group.private_target_group",
            "module.security.aws_security_group.allow_3000",
            "module.security.aws_security_group.allow_http",
            "module.security.aws_security_group.allow_https",
            "module.security.aws_security_group.allow_ssh",
            "module.security.data.http.my_ip",
            "module.vpc.aws_subnet.private_subnets",
            "module.vpc.aws_vpc.johans-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "public-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:058264358506:listener/app/public-lb/87ff8b4e0bb2d305/610ca58ee04505ff",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:058264358506:targetgroup/public-lb-tg/3d23ae4383cc1226",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:058264358506:listener/app/public-lb/87ff8b4e0bb2d305/610ca58ee04505ff",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:058264358506:loadbalancer/app/public-lb/87ff8b4e0bb2d305",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.load_balancer.aws_lb.public-lb",
            "module.load_balancer.aws_lb_target_group.public_target_group",
            "module.security.aws_security_group.allow_3000",
            "module.security.aws_security_group.allow_http",
            "module.security.aws_security_group.allow_https",
            "module.security.aws_security_group.allow_ssh",
            "module.security.data.http.my_ip",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.johans-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "private_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:058264358506:targetgroup/private-lb-tg/fea045b81a27f49c",
            "arn_suffix": "targetgroup/private-lb-tg/fea045b81a27f49c",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/health-check",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:058264358506:targetgroup/private-lb-tg/fea045b81a27f49c",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-west-2:058264358506:loadbalancer/app/private-lb/73d4f2097f89e183"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "private-lb-tg",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-05202e524762399f2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.johans-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "public_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:058264358506:targetgroup/public-lb-tg/3d23ae4383cc1226",
            "arn_suffix": "targetgroup/public-lb-tg/3d23ae4383cc1226",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/health-check",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:058264358506:targetgroup/public-lb-tg/3d23ae4383cc1226",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-west-2:058264358506:loadbalancer/app/public-lb/87ff8b4e0bb2d305"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "public-lb-tg",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-05202e524762399f2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.johans-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-2:058264358506:targetgroup/private-lb-tg/fea045b81a27f49c-20240307124257906200000002",
            "port": 3000,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:058264358506:targetgroup/private-lb-tg/fea045b81a27f49c",
            "target_id": "i-0e8a005ae2c8c5d17"
          },
          "dependencies": [
            "module.instance.aws_instance.auth",
            "module.instance.data.aws_ami.ubuntu",
            "module.load_balancer.aws_lb_target_group.private_target_group",
            "module.security.aws_security_group.allow_3000",
            "module.security.aws_security_group.allow_http",
            "module.security.aws_security_group.allow_https",
            "module.security.aws_security_group.allow_ssh",
            "module.security.data.http.my_ip",
            "module.vpc.aws_subnet.private_subnets",
            "module.vpc.aws_vpc.johans-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-2:058264358506:targetgroup/public-lb-tg/3d23ae4383cc1226-20240307124403553000000006",
            "port": 3000,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:058264358506:targetgroup/public-lb-tg/3d23ae4383cc1226",
            "target_id": "i-0adb35c342175bd2d"
          },
          "dependencies": [
            "module.instance.aws_instance.status",
            "module.instance.data.aws_ami.ubuntu",
            "module.load_balancer.aws_lb_target_group.public_target_group",
            "module.security.aws_security_group.allow_3000",
            "module.security.aws_security_group.allow_http",
            "module.security.aws_security_group.allow_https",
            "module.security.aws_security_group.allow_ssh",
            "module.security.data.http.my_ip",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.johans-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_3000",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:058264358506:security-group/sg-0c2b6f1bdaa4b9d72",
            "description": "Allow port 3000",
            "egress": [],
            "id": "sg-0c2b6f1bdaa4b9d72",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "allow_3000",
            "name_prefix": "",
            "owner_id": "058264358506",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-05202e524762399f2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.johans-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:058264358506:security-group/sg-0b9e2be61be134e2d",
            "description": "Allow inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-0b9e2be61be134e2d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_http",
            "name_prefix": "",
            "owner_id": "058264358506",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-05202e524762399f2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.johans-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:058264358506:security-group/sg-0012b62a35b3836cf",
            "description": "Allow inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "id": "sg-0012b62a35b3836cf",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "allow_https",
            "name_prefix": "",
            "owner_id": "058264358506",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-05202e524762399f2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.johans-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:058264358506:security-group/sg-07e4849a556a7222a",
            "description": "Allow inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07e4849a556a7222a",
            "ingress": [
              {
                "cidr_blocks": [
                  "92.40.217.206/32",
                  "10.0.0.0/20"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh",
            "name_prefix": "",
            "owner_id": "058264358506",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-05202e524762399f2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security.data.http.my_ip",
            "module.vpc.aws_vpc.johans-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0871ad9c67a27cc86",
            "association_id": "eipassoc-03c92e6c8df46b237",
            "domain": "vpc",
            "id": "eipalloc-0871ad9c67a27cc86",
            "network_border_group": "eu-west-2",
            "network_interface": "eni-08fc3870cf07f4609",
            "private_dns": "ip-10-0-1-163.eu-west-2.compute.internal",
            "private_ip": "10.0.1.163",
            "public_dns": "ec2-13-42-196-216.eu-west-2.compute.amazonaws.com",
            "public_ip": "13.42.196.216",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:058264358506:internet-gateway/igw-05dcfa237700c2730",
            "id": "igw-05dcfa237700c2730",
            "owner_id": "058264358506",
            "vpc_id": "vpc-05202e524762399f2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.johans-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NAT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0871ad9c67a27cc86",
            "association_id": "eipassoc-03c92e6c8df46b237",
            "connectivity_type": "public",
            "id": "nat-06bd0e56bf386e4f5",
            "network_interface_id": "eni-08fc3870cf07f4609",
            "private_ip": "10.0.1.163",
            "public_ip": "13.42.196.216",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-06b6b6949e0d40c9d",
            "tags": {
              "Name": "NAT"
            },
            "tags_all": {
              "Name": "NAT"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.johans-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-093eae572295020f91080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-06bd0e56bf386e4f5",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-093eae572295020f9",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.NAT",
            "module.vpc.aws_route_table.private_route_table",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.johans-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:058264358506:route-table/rtb-093eae572295020f9",
            "id": "rtb-093eae572295020f9",
            "owner_id": "058264358506",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-06bd0e56bf386e4f5",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-05202e524762399f2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.johans-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:058264358506:route-table/rtb-0831283dcad40dba7",
            "id": "rtb-0831283dcad40dba7",
            "owner_id": "058264358506",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05dcfa237700c2730",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-05202e524762399f2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.johans-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04b1fca533de208dd",
            "route_table_id": "rtb-093eae572295020f9",
            "subnet_id": "subnet-0e0d44e69917a5205"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private_route_table",
            "module.vpc.aws_subnet.private_subnets",
            "module.vpc.aws_vpc.johans-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_routes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cac4ab093cfb9287",
            "route_table_id": "rtb-0831283dcad40dba7",
            "subnet_id": "subnet-070df21192f4adc88"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.johans-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ce41bbd6a2b763a5",
            "route_table_id": "rtb-0831283dcad40dba7",
            "subnet_id": "subnet-06b6b6949e0d40c9d"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.johans-vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0830c48f6fb4d318d",
            "route_table_id": "rtb-0831283dcad40dba7",
            "subnet_id": "subnet-0118d624f9193e554"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.johans-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:058264358506:subnet/subnet-0e0d44e69917a5205",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.8.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e0d44e69917a5205",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "058264358506",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private0"
            },
            "tags_all": {
              "Name": "private0"
            },
            "vpc_id": "vpc-05202e524762399f2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.johans-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:058264358506:subnet/subnet-0fb94f6ac8fe7e2bb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.9.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fb94f6ac8fe7e2bb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "058264358506",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private1"
            },
            "tags_all": {
              "Name": "private1"
            },
            "vpc_id": "vpc-05202e524762399f2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.johans-vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:058264358506:subnet/subnet-05fc8e4144673629c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05fc8e4144673629c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "058264358506",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private2"
            },
            "tags_all": {
              "Name": "private2"
            },
            "vpc_id": "vpc-05202e524762399f2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.johans-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:058264358506:subnet/subnet-070df21192f4adc88",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-070df21192f4adc88",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "058264358506",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public0"
            },
            "tags_all": {
              "Name": "public0"
            },
            "vpc_id": "vpc-05202e524762399f2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.johans-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:058264358506:subnet/subnet-06b6b6949e0d40c9d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06b6b6949e0d40c9d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "058264358506",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public1"
            },
            "tags_all": {
              "Name": "public1"
            },
            "vpc_id": "vpc-05202e524762399f2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.johans-vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:058264358506:subnet/subnet-0118d624f9193e554",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0118d624f9193e554",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "058264358506",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public2"
            },
            "tags_all": {
              "Name": "public2"
            },
            "vpc_id": "vpc-05202e524762399f2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.johans-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "johans-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:058264358506:vpc/vpc-05202e524762399f2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/20",
            "default_network_acl_id": "acl-0abbdfc68ea5d99fd",
            "default_route_table_id": "rtb-0ea37efe53141a202",
            "default_security_group_id": "sg-0fb76f4a63f20aefb",
            "dhcp_options_id": "dopt-06feed11202d37527",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05202e524762399f2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ea37efe53141a202",
            "owner_id": "058264358506"
          }
        }
      ]
    }
  ]
}